--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,6 @@
 CC=$(CROSS_COMPILE)gcc
-CFLAGS=-Werror -Wall -g
+CFLAGS= -Werror -Wall -g
+LDFLAGS?= -lpthread -lrt
 
 all: aesdsocket
 
@@ -7,6 +8,6 @@ clean:
 	rm -f aesdsocket.o aesdsocket
 
 aesdsocket: aesdsocket.o
-	$(CC) $(CFLAGS) -o aesdsocket aesdsocket.o	
+	$(CC) $(CFLAGS) -o aesdsocket aesdsocket.o $(LDFLAGS)	
 
 
